[tool.poetry]
name = "reviewer"
version = "0.1.0"
description = ""
authors = ["Popov Aleksandr <popov.psk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.15.0"
pytest = "^8.3.5"
openai = "^1.73.0"
transformers = "^4.51.3"
grep-ast = { git = "https://github.com/paul-gauthier/grep-ast.git" }
ruff = "^0.11.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
